--- a/src/components/file-preview/file-preview-panel.css
+++ b/src/components/file-preview/file-preview-panel.css
@@ -187,6 +187,10 @@
   min-width: max-content;
 }
 
+.fp-nowrap .tp-line {
+  min-width: max-content;
+}
+
 .fp-nowrap .tp-code {
   white-space: pre;
   word-break: normal;
